--- a/templates/_base.html
+++ b/templates/_base.html
@@ -29,7 +29,11 @@
     </header>
     {% block content %}
     {% endblock %}
-
+    <footer>
+        <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)">
+            Hash: <a href="https://github.com/hno2/annie/commit/{{hash}}">{{hash}}</a>
+        </div>
+    </footer>
 
 
 
