--- a/templates/evaluation.html
+++ b/templates/evaluation.html
@@ -1,13 +1,5 @@
-<html lang="en">
+{% from '_macros.html' import stars %}
 
-<head>
-  <!-- Required meta tags -->
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-  <title>Annie - Automatic Code Assesment</title>
-</head>
 {% extends "_base.html" %}
 {% block content %}
 <main class="mt-5">
@@ -52,24 +44,26 @@
         <div class="tab-content" id="grades-content">
           <div class="tab-pane fade show active" id="grades-tabs-1" role="tabpanel" aria-labelledby="grades-ai">
             <ul>
-              <li>Follow a process<span class="fa fa-star checked"></span>
-                <span class="fas fa-star checked"></span>
-                <span class="fas fa-star checked"></span>
-                <span class="fas fa-star"></span>
-                <span class="fas fa-star"></span></li>
+              <li>Follow a process</li>
               <li>Common Errors
-                <span class="fas fa-star"></span>
-                <span class="fas fa-star"></span>
-                <span class="fas fa-star"></span>
-                <span class="fas fa-star"></span>
-                <span class="fa fa-star"></span></li>
+                {{stars(50)}}</li>
               </li>
             </ul>
           </div>
           <div class="tab-pane fade" id="grades-tabs-2" role="tabpanel" aria-labelledby="grades-style">
-            <h4>Notes on your style</h4>
-            Grade: (Stars)
-            Please check out these suggestions to make your code more readable. Please note that they do'nt
+            <div class="row">
+              <h4>Notes on your style</h4>
+              {{stars(file.static.score)}}
+              Here we want to provide you some tips to make your code more readable, they are powered by PyLint, you can
+              find more information with the codes listed here.
+              <div class="col-md-6">
+                <ul class="list-group text-left">
+                  {%for msg in file.static.msgs%}
+                  <li class="list-group-item">{{msg}}</li>
+                  {%endfor%}
+                </ul>
+              </div>
+            </div>
           </div>
           <div class="tab-pane fade" id="grades-tabs-3" role="tabpanel" aria-labelledby="grades-reviewer">
             Unfortunatly no reviewer has yet looked at your assignment. Check out the comments made by our AI Evaluation
