Frontend for Database

--- a/annie/blueprints/user/templates/launch.html
+++ b/annie/blueprints/user/templates/launch.html
@@ -1,3 +1,4 @@
+{% from '_macros.html' import grade,task_card %}
 {% extends "_base.html" %}
 {%block custom_style%}
 {{ dropzone.load_css() }}
@@ -10,56 +11,47 @@
 {%endblock custom_style%}
 
 {% block content %}
-
-<ul class="stepper stepper-vertical" id="stepper-submit" data-mdb-stepper-linear="true"
-    data-mdb-stepper-type="vertical">
-    <li class="stepper-step stepper-active" id="upload">
-        <div class="stepper-head" tabindex="0">
-            <span class="stepper-head-icon">1 </span>
-            <span class="stepper-head-text"> Upload Files </span>
-        </div>
-        <div class="stepper-content py-3">
-            {{ dropzone.create(action='user.upload') }}
-        </div>
-    </li>
-    <!-- First step -->
-
-    <!-- Second step -->
-    <li class="stepper-step" id="description">
-        <div class="stepper-head">
-            <span class="stepper-head-icon"> 2 </span>
-            <span class="stepper-head-text"> Describe your UseCase </span>
-        </div>
-        <div class="stepper-content py-3">
-            Specify the problem you are solving here. Think about specific and attainable goals.
-            <div class="form-outline mb-4">
-                <textarea id="question" class="form-control" rows="4"></textarea>
-                <label class="form-label" for="question">Question</label>
+<main class="container">
+    <section class="my-5" id="welcome">
+        <div class="row p-4 pb-0 pe-lg-0 pt-lg-5 align-items-center rounded-3 border shadow-lg">
+            <div class="col-lg-7 p-3 p-lg-5 pt-lg-3">
+                <h1 class="display-4 fw-bold lh-1">Hey {{session["name"]}}!</h1>
+                <p class="lead">Welcome to the your Code Assessment. You can start working on your assigments now or see
+                    the
+                    feedback.</p>
+                <div class="d-grid gap-2 d-md-flex justify-content-md-start mb-4 mb-lg-3">
+                    <button type="button" class="btn btn-primary btn-lg px-4 me-md-2 fw-bold">Start Now</button>
+                    <button type="button" class="btn btn-outline-secondary btn-lg px-4">Go Back</button>
+                </div>
             </div>
-
-            <div class="form-check d-flex justify-content-center mb-4">
-                <input class="form-check-input me-2" type="checkbox" value="" id="video" />
-                <label class="form-check-label" for="video">
-                    I want to upload a video instead.
-                </label>
+            <div class="col-lg-4 offset-lg-1 p-0 overflow-hidden shadow-lg">
+                <img class="rounded-lg-3" src="{{ url_for('static', filename='img/now.jpg') }}" alt="" width="720">
             </div>
-            Or Upload Video
-    </li>
-    <!-- Second step -->
-
-    <!-- Third step -->
-    <li class="stepper-step">
-        <div class="stepper-head">
-            <span class="stepper-head-icon">2 </span>
-            <span class="stepper-head-text"> Peer Review </span>
         </div>
-        <div class="stepper-content py-3">
-            Check out these tags to match you with a peer reviewer.
-            Once you have reviewed two other students code.
-        </div>
-    </li>
-</ul>
+    </section>
+    <section id="assignments" style="background:#fbfbfb !important;">
+        {%for assignment in assignments %}
+        {{task_card(assignment.title,"Description here",assignment.github)}}
+        {%endfor%}
 
+    </section>
+    <section id="submissions">
+
+        <h4>Your latest submissions and results</h4>
+        <div class="list-group">
+            {%for sub in submissions %}
+            <div class="list-group-item list-group-item-action">
+                <div class="d-flex w-100 justify-content-between">
+                    <h5 class="mb-1">{{sub.assignment.title}}</h5>
+                </div>
+                <p class="mb-1">
+                </p>
+                <small>{{sub.created|timeago}}</small>
+            </div>
+            {%endfor%}
+        </div>
+    </section>
+</main>
 {%endblock content%}
 
 {% block custom_js %}
