--- a/annie/templates/_macros.html
+++ b/annie/templates/_macros.html
@@ -18,3 +18,53 @@
 </div>
 
 {%- endmacro %}
+
+{% macro task_card(name, description,repository, grades=[]) -%}
+<div class="card">
+    <h5 class="card-header">{{name}}</h5>
+    <div class="card-body">
+        <p class="card-text">
+            {{description}}
+        </p>
+        <a href="https://colab.research.google.com/github/{{repository}}"><span class="badge bg-warning text-dark">
+                <i class="fas fa-infinity"></i> Open in Colab</span></a>
+        <a href="https://www.github.com/{{repository}}"><span class="badge bg-success ms-2 me-5"><i
+                    class="fas fa-download fa-lg"></i>
+                Download</span></a>
+    </div>
+</div>
+<br>
+{%- endmacro %}
+
+
+{% macro grade(percentage) -%}
+<div class="grade">
+    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 110 110">
+        <style>
+            svg {
+                height: 120px;
+            }
+
+            path {
+                stroke-linecap: round;
+                stroke-width: 2;
+            }
+
+            .bottom {
+                stroke: lightgrey;
+            }
+        </style>
+        <defs>
+            <path id="thePath" d="M40,90
+A40,40 0 1,1 70,90" style="fill:none;" />
+        </defs>
+        <use xlink:href="#thePath" id="base" class="bottom" />
+        <use xlink:href="#thePath" id="slider" class="top" style="stroke: {{'#FFA900' if percentage<30 else '#1266F1'}};
+            stroke-dasharray: 220;
+            stroke-dashoffset: {{220-percentage*2.2}};" />
+
+        <text id="theText" x="55" y="55" dominant-baseline="middle" text-anchor="middle">{{percentage}}%</text>
+    </svg>
+</div>
+
+{%- endmacro %}
