--- a/annie/templates/_macros.html
+++ b/annie/templates/_macros.html
@@ -19,9 +19,33 @@
 
 {%- endmacro %}
 
-{% macro task_card(name, description,repository, grades=[]) -%}
+{% macro grade_block(grade,threshold=50) -%}
+
+{% set mapping = {"Success": "bg-success", "In Progress": "bg-info", "Failed":"bg-warning"} -%}
+
+{%if grade%}
+{%if grade.overall>50%}
+{%set status="Success"%}
+{%else%}
+{%set status="Failed"%}
+{%endif%}
+{%else%}
+{%set status="In Progress"%}
+{%endif%}
+
+<span class="badge
+{{mapping[status]}}
+">{{status}}
+    {%if grade%}
+    <span class="badge bg-light text-dark ms-2">{{grade.overall}}/100</span>
+    <span class="visually-hidden">grade</span></span>
+{%endif%}
+{%- endmacro %}
+
+{% macro task_card(name, description,repository, grade) -%}
 <div class="card">
-    <h5 class="card-header">{{name}}</h5>
+    <h5 class="card-header d-flex justify-content-between align-items-center">{{name}}
+        {{grade_block(grade)}}</h5>
     <div class="card-body">
         <p class="card-text">
             {{description}}
