--- a/annie/blueprints/user/templates/launch.html
+++ b/annie/blueprints/user/templates/launch.html
@@ -13,15 +13,23 @@
 {% block content %}
 <main class="container">
     <section class="my-5" id="welcome">
+        {% with messages = get_flashed_messages() %}
+        {% if messages %}
+              {% for message in messages %}
+              <div class="alert alert-success" role="alert">{{ message }}</div>
+              {% endfor %}
+        {% endif %}
+     {% endwith %}
+        <div class="alert alert-warning" role="alert"><b>Warning:</b> This is a first prototype, bugs and errors might occur frequently </div>
         <div class="row p-4 pb-0 pe-lg-0 pt-lg-5 align-items-center rounded-3 border shadow-lg">
             <div class="col-lg-7 p-3 p-lg-5 pt-lg-3">
-                <h1 class="display-4 fw-bold lh-1">Hey {{session["name"]}}!</h1>
+                <h1 class="display-4 fw-bold lh-1">Hey {{user.username}}!</h1>
                 <p class="lead">Welcome to the your Code Assessment. You can start working on your assigments now or see
                     the
                     feedback.</p>
                 <div class="d-grid gap-2 d-md-flex justify-content-md-start mb-4 mb-lg-3">
-                    <button type="button" class="btn btn-primary btn-lg px-4 me-md-2 fw-bold">Start Now</button>
-                    <button type="button" class="btn btn-outline-secondary btn-lg px-4">Go Back</button>
+                    <a href="#assignments" type="button" class="btn btn-primary btn-lg px-4 me-md-2 fw-bold">Start Now</a>
+                    <a href='{{session["return_url" if "return_url" in session]}}' type="button" class="btn btn-outline-secondary btn-lg px-4">Go Back</a>
                 </div>
             </div>
             <div class="col-lg-4 offset-lg-1 p-0 overflow-hidden shadow-lg">
@@ -31,6 +39,7 @@
     </section>
 
     <section id="assignments">
+        <div class="alert alert-primary" role="alert">Use this token for authentication <code id="auth_token">{{user.auth_token}}</code> </div>
         {% if assignments %}
         {%for assignment in assignments %}
         {{task_card(assignment.title,"Description here",assignment.github, submissions=assignment.submissions)}}
