--- a/annie/blueprints/eval/templates/evaluation.html
+++ b/annie/blueprints/eval/templates/evaluation.html
@@ -13,6 +13,7 @@
             {{file.html|safe}}
           </div>
         </div>
+      {%if file.process%}
         <div class="col-md-3">
           {%set index_labels=["Algorithm_Selection","Conclusio","Data_Adaption","Data_Understanding","Hyperparameter_Adjustment","None"]%}
           {%for labels in file.process%}
@@ -29,6 +30,7 @@
           </div>
           {%endfor %}
         </div>
+      {%endif%}
       </div>
 
     </section>
@@ -66,6 +68,7 @@
           <div class="tab-pane fade" id="grades-tabs-2" role="tabpanel" aria-labelledby="grades-style">
             <div class="row">
               <h4>Notes on your style</h4>
+              {%if file.static%}
               {{stars(file.static.score)}}
               Here we want to provide you some tips to make your code more readable, they are powered by PyLint,
               you can
@@ -77,6 +80,7 @@
                   {%endfor%}
                 </ul>
               </div>
+              {%endif%}
             </div>
           </div>
           <div class="tab-pane fade" id="grades-tabs-3" role="tabpanel" aria-labelledby="grades-reviewer">
