--- a/annie/blueprints/evaluation/templates/_modal.html
+++ b/annie/blueprints/evaluation/templates/_modal.html
@@ -1,71 +1,81 @@
 <div class="modal" id="showcase-modal" tabindex="-1">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title">Just a few questions, to get started!</h5>
-          <button
-            type="button"
-            class="btn-close"
-            data-mdb-dismiss="modal"
-            aria-label="Close"
-          ></button>
-        </div>
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">Just a few questions, to get started!</h5>
+        <button type="button" class="btn-close" data-mdb-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <form action="{{url_for('showcase.add_showcase')}}" method="POST" class="needs-validation" novalidate>
         <div class="modal-body">
-          
-<ul class="stepper stepper-vertical" id="stepper-submit" data-mdb-stepper-linear="true"
-data-mdb-stepper-type="vertical">
-<li class="stepper-step stepper-completed" id="upload">
-    <div class="stepper-head" tabindex="0">
-        <span class="stepper-head-icon">1 </span>
-        <span class="stepper-head-text"> Upload Files <i class="fas fa-check-circle"></i></span>
-    </div>
-    <div class="stepper-content py-3">
-    </div>
-</li>
-<!-- First step -->
+          <ul class="stepper stepper-vertical" id="stepper-submit" data-mdb-stepper-linear="true" data-mdb-stepper-type="vertical">
+            <li class="stepper-step stepper-completed" id="upload">
+              <div class="stepper-head" tabindex="0">
+                <span class="stepper-head-icon">1 </span>
+                <span class="stepper-head-text"> Upload Files <i class="fas fa-check-circle"></i></span>
+              </div>
+              <div class="stepper-content py-3">
+              </div>
+            </li>
+            <!-- First step -->
 
-<!-- Second step -->
-<li class="stepper-step" id="description">
-    <div class="stepper-head">
-        <span class="stepper-head-icon"> 2 </span>
-        <span class="stepper-head-text"> Describe your UseCase </span>
-    </div>
-    <div class="stepper-content py-3">
-        Specify the problem you are solving here. Think about specific and attainable goals.
-        <div class="form-outline mb-4">
-            <textarea id="question" class="form-control" rows="4"></textarea>
-            <label class="form-label" for="question">Question</label>
-        </div>
+            <!-- Second step -->
+            <li class="stepper-step" id="description">
+              <div class="stepper-head">
+                <span class="stepper-head-icon"> 2 </span>
+                <span class="stepper-head-text"> Describe your UseCase </span>
+              </div>
+              <div class="stepper-content py-3">
+                <div class="form-outline mb-4">
+                  <input type="text" id="title" name="title" class="form-control" required/>
+                  <label class="form-label" for="title" >Title</label>
+                  <div class="invalid-feedback">Please choose a title.</div>
+                </div>
+                Please describe what you are doing. Be short but specific.
+                <div class="form-outline mb-4">
+                  <textarea id="description" class="form-control" name="description" rows="4" required></textarea >
+                  <label class="form-label" for="description">Description</label>
+                  <div class="invalid-feedback">Please provide a short description.</div>
+                </div>
 
-        <div class="form-check d-flex justify-content-center mb-4">
-            <input class="form-check-input me-2" type="checkbox" value="" id="video" />
-            <label class="form-check-label" for="video">
-                I want to upload a video instead.
-            </label>
-        </div>
-        Or Upload Video
-</li>
-<!-- Second step -->
+                <div class="form-check d-flex justify-content-center mb-4">
+                  <input class="form-check-input me-2" type="checkbox" value="" id="video" />
+                  <label class="form-check-label" for="video">
+                    I want to upload a video.
+                  </label>
+                  <div class="form-outline mb-4">
+                    <input type="url" id="videolink" class="form-control" disabled name="video" />
+                    <label class="form-label" for="videolink">YouTube Link</label>
+                  </div>
+                </div>
+            </li>
+            <!-- Second step -->
 
-<!-- Third step -->
-<li class="stepper-step">
-    <div class="stepper-head">
-        <span class="stepper-head-icon">2 </span>
-        <span class="stepper-head-text"> Peer Review </span>
-    </div>
-    <div class="stepper-content py-3">
-        Check out these tags to match you with a peer reviewer.
-        Once you have reviewed two other students code.
-    </div>
-</li>
-</ul>
+            <!-- Third step -->
+            <li class="stepper-step">
+              <div class="stepper-head">
+                <span class="stepper-head-icon">2 </span>
+                <span class="stepper-head-text"> Tags </span>
+              </div>
+              <div class="stepper-content py-3">
+                <label for="tags">
+                  Add tags so others can find your work easily.
+                  <select id="tags" name="tags" multiple="multiple" style="width:100%">
+                    {% for tag in tags %}
+                    <option value="{{ tag.name }}">{{ tag.name }}</option>
+                    {%endfor%}
+                  </select>
+                </label>
+              </div>
+            </li>
+          </ul>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-outline-secondary" data-mdb-dismiss="modal">
             Close
           </button>
-          <button type="button" class="btn btn-primary">Show the world!</button>
+          <button type="submit" class="btn btn-primary">Show the world!</button>
         </div>
-      </div>
+      </form>
     </div>
   </div>
+</div>
