--- a/annie/blueprints/playground/templates/playground.html
+++ b/annie/blueprints/playground/templates/playground.html
@@ -1,7 +1,8 @@
 {% extends "_base.html" %}
-{% from '_macros.html' import showcase_block %}
+{% from '_macros.html' import showcase_block,flash_message %}
 {% block content %}
 <div class="container"> 
+  {{flash_message()}}
 <section id="recently">
     <h4>Recently Added</h4>
     {{showcase_block(showcases.getrecent())}}
