--- a/annie/blueprints/evaluation/templates/_modal.html
+++ b/annie/blueprints/evaluation/templates/_modal.html
@@ -59,7 +59,7 @@
               <div class="stepper-content py-3">
                 <label for="tags">
                   Add tags so others can find your work easily.
-                  <select id="tags" name="tags" multiple="multiple" style="width:100%">
+                  <select id="tags" name="tags[]" multiple="multiple" style="width:100%">
                     {% for tag in tags %}
                     <option value="{{ tag.name }}">{{ tag.name }}</option>
                     {%endfor%}
