--- a/annie/blueprints/evaluation/templates/evaluation.html
+++ b/annie/blueprints/evaluation/templates/evaluation.html
@@ -7,7 +7,7 @@
 
 
     <section id="welcome">
-      {% if config["SHOWCASE_ENABLED"]%}
+      {% if config["ENABLE_SHOWCASE"]%}
       <button type="button" class="btn btn-outline-primary" data-mdb-ripple-color="dark" data-mdb-toggle="modal" data-mdb-target="#showcase-modal">
         Ready to show it to others?
       </button>
