Move flash message to macro

--- a/annie/templates/_macros.html
+++ b/annie/templates/_macros.html
@@ -18,6 +18,15 @@
 </div>
 
 {%- endmacro %}
+{% macro flash_message() -%}
+    {% with messages = get_flashed_messages() %}
+        {% if messages %}
+            {% for message in messages %}
+            <div class="alert alert-success" role="alert">{{ message }}</div>
+            {% endfor %}
+        {% endif %}
+    {% endwith %}
+{%- endmacro %}
 {% macro showcase_block(showcases) -%}
 <div class="card-group">
   {% for showcase in showcases %}
