--- a/annie/blueprints/user/templates/index.html
+++ b/annie/blueprints/user/templates/index.html
@@ -1,4 +1,4 @@
-{% from '_macros.html' import task_card,gradeblock with context%}
+{% from '_macros.html' import task_card,gradeblock, flash_message with context%}
 {% extends "_base.html" %}
 {%block custom_css%}
 {{ dropzone.load_css() }}
@@ -13,13 +13,7 @@
 {% block content %}
 <main class="container">
     <section class="my-5" id="welcome">
-        {% with messages = get_flashed_messages() %}
-        {% if messages %}
-              {% for message in messages %}
-              <div class="alert alert-success" role="alert">{{ message }}</div>
-              {% endfor %}
-        {% endif %}
-     {% endwith %}
+        {{flash_message()}}
         <div class="alert alert-warning" role="alert"><b>Warning:</b> This is a first prototype, bugs and errors might occur frequently </div>
         <div class="row p-4 pb-0 pe-lg-0 pt-lg-5 align-items-center rounded-3 border shadow-lg">
             <div class="col-lg-7 p-3 p-lg-5 pt-lg-3">
@@ -40,7 +34,7 @@
 
     <section id="assignments">
         <div class="alert alert-primary" role="alert">Use this token for authentication <code id="auth_token">{{user.auth_token}}</code> </div>
-        {% if assignments %}
+        {% if user.assignments %}
             {%for assignment in user.assignments %}
                 {{task_card(assignment.title,assignment.description,assignment.github, submissions=assignment.submissions)}}
             {%endfor%}
