--- a/annie/blueprints/evaluation/templates/_modal.html
+++ b/annie/blueprints/evaluation/templates/_modal.html
@@ -5,7 +5,7 @@
         <h5 class="modal-title">Just a few questions, to get started!</h5>
         <button type="button" class="btn-close" data-mdb-dismiss="modal" aria-label="Close"></button>
       </div>
-      <form action="{{url_for('showcase.add_showcase')}}" method="POST" class="needs-validation" novalidate>
+      <form action="{{url_for('playground.add_showcase')}}" method="POST" class="needs-validation" novalidate>
         <div class="modal-body">
           <ul class="stepper stepper-vertical" id="stepper-submit" data-mdb-stepper-linear="true" data-mdb-stepper-type="vertical">
             <li class="stepper-step stepper-completed" id="upload">
