Static Evaluating Submissions

--- a/annie/blueprints/evaluation/templates/evaluation.html
+++ b/annie/blueprints/evaluation/templates/evaluation.html
@@ -112,5 +112,6 @@
 {%endblock%}
 {%block custom_js%}
 <script type="text/javascript" src="{{ url_for('static', filename='js/showcase.js') }}"></script>
+<script type="text/javascript" src="{{ url_for('static', filename='js/evaluation.js') }}"></script>
 <script type="text/javascript" src="{{ url_for('static', filename='js/select2.min.js') }}"></script>
 {%endblock%}
