--- a/annie/blueprints/playground/templates/playground.html
+++ b/annie/blueprints/playground/templates/playground.html
@@ -1,11 +1,11 @@
 {% extends "_base.html" %}
-{% from '_macros.html' import showcase_block,flash_message %}
+{% from '_macros.html' import showcase_block,flash_message with context %}
 {% block content %}
-<div class="container"> 
+<div class="container mt-5"> 
   {{flash_message()}}
   {%if filtered%}
   <section id="search">
-    <h4>Filtered by Tag <span class="badge rounded-pill bg-primary">{{filtered}}<a href="/playground" class="btn-close btn-close-white ms-2" aria-label="Close"></a></span></h4>
+    <h4>Filtered by Tag <span class="badge rounded-pill bg-secondary">{{filtered}}<a href="/playground" class="btn-close btn-close-white ms-2" aria-label="Close"></a></span></h4>
     {{showcase_block(showcases.get_by_tag(filtered))}}
     {%else%}
   </section>
@@ -14,11 +14,13 @@
     {{showcase_block(showcases.getrecent())}}
 
   </section>
-
+  <section class="mt-3" id="popular">
   <h4>Most Popular</h4>
   {{showcase_block(showcases.getpopular())}}
-  <h4>Explore</h4>
-  Random
+  </section>
   {%endif%}
 </div class="container">
 {% endblock content%}
+{%block custom_js%}
+<script type="text/javascript" src="{{ url_for('static', filename='js/showcase.js') }}"></script>
+{%endblock%}
